Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22552

[Crash] xcb with threaded renderer randomly crashes in QXcbClipboard::getSelectionOwner()

    XMLWordPrintable

Details

    Description

      Fresh pull of libxcb with threaded renderer enabled.

      Core was generated by `./tst_qquicktextedit'.
      Program terminated with signal 6, Aborted.
      #0 0xb7775832 in _dl_sysinfo_int80 () from /lib/ld-linux.so.2
      (gdb) bt
      #0 0xb7775832 in _dl_sysinfo_int80 () from /lib/ld-linux.so.2
      #1 0xb4fa4651 in *__GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
      #2 0xb4fa7a82 in *__GI_abort () at abort.c:92
      #3 0xb5394939 in qt_message_output (msgType=QtFatalMsg, buf=0xadb13af8 "Received signal 11")
      at global/qglobal.cpp:2101
      #4 0xb5394b32 in qt_message (msgType=QtFatalMsg, msg=0xb7767fb4 "Received signal %d",
      ap=0xbfeaee04 "\v") at global/qglobal.cpp:2147
      #5 0xb5394e9b in qFatal (msg=0xb7767fb4 "Received signal %d") at global/qglobal.cpp:2325
      #6 0xb7754459 in QTest::FatalSignalHandler::signal (signum=11) at qtestcase.cpp:1680
      #7 <signal handler called>
      #8 0xb2f1c20b in QXcbClipboard::getSelectionOwner (this=0x88e45f8, atom=403)
      at qxcbclipboard.cpp:226
      #9 0xb2f1c2e5 in QXcbClipboard::mimeData (this=0x88e45f8, mode=QClipboard::Clipboard)
      at qxcbclipboard.cpp:256
      #10 0xb57b1eca in QClipboard::mimeData (this=0x89b8308, mode=QClipboard::Clipboard)
      at kernel/qclipboard_qpa.cpp:69
      #11 0xb58a51f1 in QTextControl::canPaste (this=0x8962608) at text/qtextcontrol.cpp:2184
      #12 0xb6b6a9b5 in QQuickTextEdit::q_canPasteChanged (this=0x89628b8)
      at items/qquicktextedit.cpp:1966
      #13 0xb6c8476b in QQuickTextEdit::qt_static_metacall (_o=0x89628b8,
      _c=QMetaObject::InvokeMetaMethod, _id=40, _a=0xbfeaf558)
      at .moc/debug-shared/moc_qquicktextedit_p.cpp:287
      #14 0xb54f42cd in QMetaObject::activate (sender=0x89b8308, m=0xb5bd2c68, local_signal_index=3,
      argv=0x0) at kernel/qobject.cpp:3391
      #15 0xb5ad01c1 in QClipboard::dataChanged (this=0x89b8308)
      at .moc/debug-shared/moc_qclipboard.cpp:128
      #16 0xb57ce55e in QClipboard::emitChanged (this=0x89b8308, mode=QClipboard::Clipboard)
      at kernel/qclipboard.cpp:556
      #17 0xb57bf69c in QPlatformClipboard::emitChanged (this=0x88e45f8, mode=QClipboard::Clipboard)
      at kernel/qplatformclipboard_qpa.cpp:114
      #18 0xb2f1ce33 in QXcbClipboard::handleSelectionClearRequest (this=0x88e45f8, event=0xace27ab8)
      at qxcbclipboard.cpp:435
      #19 0xb2f22a9d in QXcbConnection::handleXcbEvent (this=0x88d83c0, event=0xace27ab8)
      at qxcbconnection.cpp:532
      #20 0xb2f23104 in QXcbConnection::processXcbEvents (this=0x88d83c0) at qxcbconnection.cpp:667
      #21 0xb2f412da in QXcbConnection::qt_static_metacall (_o=0x88d83c0,
      _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xace2fe88)
      at .moc/debug-shared/moc_qxcbconnection.cpp:129
      #22 0xb54edf94 in QMetaCallEvent::placeMetaCall (this=0xace0e8e0, object=0x88d83c0)
      at kernel/qobject.cpp:529
      #23 0xb54ef8b3 in QObject::event (this=0x88d83c0, e=0xace0e8e0) at kernel/qobject.cpp:1111
      #24 0xb6fb0966 in QApplicationPrivate::notify_helper (this=0x88c07e0, receiver=0x88d83c0,
      e=0xace0e8e0) at kernel/qapplication.cpp:4080
      #25 0xb6fae2b3 in QApplication::notify (this=0xbfeb0ad8, receiver=0x88d83c0, e=0xace0e8e0)
      at kernel/qapplication.cpp:3497
      #26 0xb54ccd5e in QCoreApplication::notifyInternal (this=0xbfeb0ad8, receiver=0x88d83c0,
      event=0xace0e8e0) at kernel/qcoreapplication.cpp:827
      #27 0x080711d5 in QCoreApplication::sendEvent (receiver=0x88d83c0, event=0xace0e8e0)
      at ../../../../../qtbase/include/QtCore/../../src/corelib/kernel/qcoreapplication.h:205
      #28 0xb54cde60 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0,
      data=0x88c0ad0) at kernel/qcoreapplication.cpp:1469
      #29 0xb54cd92f in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0)
      at kernel/qcoreapplication.cpp:1339
      #30 0xb57b4f32 in QCoreApplication::sendPostedEvents ()
      at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:210
      #31 0xb55114ea in postEventSourceDispatch (s=0x88d7510) at kernel/qeventdispatcher_glib.cpp:279
      #32 0xb4ec25e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
      --Type <return> to continue, or q <return> to quit--
      #33 0xb4ec62d8 in ?? () from /lib/libglib-2.0.so.0
      #34 0xb4ec64b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
      #35 0xb551251e in QEventDispatcherGlib::processEvents (this=0x88cb548, flags=...)
      at kernel/qeventdispatcher_glib.cpp:424
      #36 0xb54cd28d in QCoreApplication::processEvents (flags=..., maxtime=200)
      at kernel/qcoreapplication.cpp:1037
      #37 0x0804fec8 in qWait (ms=200)
      at ../../../../../qtbase/include/QtTest/../../src/testlib/qtestsystem.h:70
      #38 0x0804ff20 in qWaitForWindowShown (window=0xbfeb00ac)
      at ../../../../../qtbase/include/QtTest/../../src/testlib/qtestsystem.h:89
      #39 0x0806be39 in tst_qquicktextedit::textInput (this=0xbfeb0aa8) at tst_qquicktextedit.cpp:1964
      #40 0x0806feeb in tst_qquicktextedit::qt_static_metacall (_o=0xbfeb0aa8,
      _c=QMetaObject::InvokeMetaMethod, _id=40, _a=0xbfeb0180)
      at .moc/debug-shared/tst_qquicktextedit.moc:167
      #41 0xb54d7378 in QMetaMethod::invoke (this=0xbfeb02ec, object=0xbfeb0aa8,
      connectionType=Qt::DirectConnection, returnValue=..., val0=..., val1=..., val2=..., val3=...,
      val4=..., val5=..., val6=..., val7=..., val8=..., val9=...) at kernel/qmetaobject.cpp:1650
      #42 0xb54d679a in QMetaObject::invokeMethod (obj=0xbfeb0aa8, member=0xace24938 "textInput",
      type=Qt::DirectConnection, ret=..., val0=..., val1=..., val2=..., val3=..., val4=...,
      val5=..., val6=..., val7=..., val8=..., val9=...) at kernel/qmetaobject.cpp:1192
      #43 0xb7756016 in QMetaObject::invokeMethod (obj=0xbfeb0aa8, member=0xace24938 "textInput",
      type=Qt::DirectConnection, val0=..., val1=..., val2=..., val3=..., val4=..., val5=...,
      val6=..., val7=..., val8=..., val9=...)
      at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs.h:406
      #44 0xb77535ed in qInvokeTestMethodDataEntry (slot=0xace24938 "textInput") at qtestcase.cpp:1392
      #45 0xb7753bf5 in qInvokeTestMethod (slotName=0x807cda8 "textInput()", data=0x0)
      at qtestcase.cpp:1493
      #46 0xb77543a6 in qInvokeTestMethods (testObject=0xbfeb0aa8) at qtestcase.cpp:1647
      #47 0xb7754aaf in QTest::qExec (testObject=0xbfeb0aa8, argc=1, argv=0xbfeb0ba4)
      at qtestcase.cpp:1853
      #48 0x0806fb9f in main (argc=1, argv=0xbfeb0ba4) at tst_qquicktextedit.cpp:2444
      (gdb) q
      martjone@bq-pan:~/depot/qt/qt5/qtdeclarative/tests/auto/declarative/qquicktextedit$ vi tst_qquicktextedit.cpp

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rodal Samuel Rødal
            martjone Martin Jones (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes